ncc/testsuite/positive/Issue-1223-lib.n
using System.Console;

public class Base[TSingle]
{
 protected virtual Foo() :void
 {
  WriteLine(typeof(TSingle));
 }

 public Test() : void { Foo() }
}
