ncc/testsuite/negative/Issue-git-0294.n
using System;
using System.Console;

class A[T]
{
  public class B[E] { }

  public static Test() : Type
  {
    typeof(A[T].B[_]) // E: to create open generic type, all arguments must be open
  }
}